# cargo-features = ["public-dependency"]

[package]
name = "tracing-durations-export"
version = "0.1.0"
edition = "2021"
description = "Record and visualize parallelism of tracing spans"

[[bin]]
name = "plot"
required-features = ["plot", "cli"]

[dependencies]
anyhow = { version = "1.0.79", optional = true }
clap = { version = "4.4.13", optional = true, features = ["derive"] }
fs = { package = "fs-err", version = "2.11.0" }
itertools = { version = "0.12.0", optional = true }
once_cell = "1.19.0"
rustc-hash = { version = "1.1.0", optional = true }
serde = { version = "1.0.195", features = ["derive"] } # public = true
serde_json = "1.0.111"
svg = { version = "0.14.0", optional = true } # public = true
tracing = { version = "0.1.40", default-features = false } # public = true
tracing-subscriber = { version = "0.3.18", default-features = false } # public = true

[features]
plot = ["anyhow", "itertools", "rustc-hash", "svg"]
cli = ["clap"]

[dev-dependencies]
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std", "registry"] }

[package.metadata.docs.rs]
features = ["plot"]
